test/sema/invalid-operands-to-logical-and.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

func main() {
    var foo = 0;
    var bar = true;
    // CHECK: [[@LINE+1]]:13: error: invalid operands to binary expression ('int' and 'bool')
    if (foo && bar) { }
}
